force-app/main/default/objects/aecm__Entity__c/aecm__Entity__c.object-meta.xml
<CustomObject>
    <description>This object is for tracking business entities for Purvue.</description>
    <label>Entity</label>
    <nameField>
        <label>Entity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Entities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>