force-app/main/default/objects/aecm__Entity__c/fields/aecm__Functional_Unit__c.field-meta.xml
<CustomField>
    <fullName>aecm__Functional_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Functional unit related to the entity (Optional).</description>
    <label>Functional Unit</label>
    <referenceTo>aecm__Functional_Unit__c</referenceTo>
    <relationshipLabel>Entities</relationshipLabel>
    <relationshipName>Entities</relationshipName>
    <type>Lookup</type>
</CustomField>