force-app/main/default/objects/aecm__Entity__c/fields/aecm__Geography__c.field-meta.xml
<CustomField>
    <fullName>aecm__Geography__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Geo for the Entity record.</description>
    <label>Geography</label>
    <referenceTo>aecm__Geo__c</referenceTo>
    <relationshipLabel>Entities</relationshipLabel>
    <relationshipName>Entities</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>