force-app/main/default/objects/aecm__Entity__c/listViews/aecm__All.listView-meta.xml
<ListView>
    <fullName>aecm__All</fullName>
    <columns>NAME</columns>
    <columns>aecm__Geography__c</columns>
    <columns>aecm__Functional_Unit__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>